--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   </head>
   <body>
     <form action="/" method="post">
+      <input type="text" name="amount" />
+
       <select name="crypto">
         <option value="BTC">Bitcoin</option>
         <option value="ETH">Ethereum</option>
